--- a/lab6.ipynb
+++ b/lab6.ipynb
@@ -45,20 +45,19 @@
       "metadata": {
         "id": "h36oiM50uGmL",
         "colab_type": "code",
-        "outputId": "daad68cb-a758-49e1-9cd5-d0a6658b3112",
+        "outputId": "8e0d9849-ffb2-4b3a-d405-8df3cbc38818",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 469
+          "height": 451
         }
       },
       "source": [
         "print(len(train.data))\n",
         "print(len(test.data))\n",
         "print(train.target_names)\n",
-        "print(\"\\n\".join(train.data[0].split(\"\\n\")))\n",
-        "print(\"Target\",train.target)"
+        "print(\"\\n\".join(train.data[0].split(\"\\n\")))"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,8 +85,7 @@
             "Email: M.P.Collier@uk.ac.city                The City University,\n",
             "Tel: 071 477-8000 x3769                      London,\n",
             "Fax: 071 477-8565                            EC1V 0HB.\n",
-            "\n",
-            "Target [1 1 3 ... 2 2 2]\n"
+            "\n"
           ],
           "name": "stdout"
         }
@@ -116,10 +114,10 @@
       "metadata": {
         "id": "9Pi6F_sr61DA",
         "colab_type": "code",
-        "outputId": "8447255e-2320-406a-8f5e-9c275e6af2a7",
+        "outputId": "9e52a491-3736-4a72-e89a-1b1bb4f9f71f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 324
+          "height": 342
         }
       },
       "source": [
@@ -133,16 +131,18 @@
         "\n",
         "predict=mod.predict(x_test_tfid)\n",
         "\n",
+        "print(test.target)\n",
         "print(predict)\n",
         "print(\"Accuracy :\",accuracy_score(test.target,predict))\n",
         "print(classification_report(test.target,predict,target_names=test.target_names))\n",
         "print(confusion_matrix(test.target,predict))"
       ],
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[2 2 2 ... 2 2 1]\n",
             "[2 2 3 ... 2 2 1]\n",
             "Accuracy : 0.8348868175765646\n",
             "                        precision    recall  f1-score   support\n",
