--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -29,11 +29,11 @@
       "metadata": {
         "id": "i38m_sUS2LGg",
         "colab_type": "code",
+        "outputId": "ab368958-54a2-4c86-e159-5836e1262850",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
-        },
-        "outputId": "a1fa29c8-4ca3-43b3-acec-88691ca346b9"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -55,37 +55,39 @@
         "traindata=examples[1:]\n",
         "data=np.array(traindata)\n",
         "\n",
-        "split_ratio=0.8\n",
+        "split_ratio=0.7\n",
         "train_data,test_data=train_test_split(data,split_ratio)\n",
+        "\n",
         "\n",
         "test_target=test_data[:,-1]\n",
         "train_target=train_data[:,-1]\n",
         "print('Training data')\n",
         "print(train_data)\n",
         "print('Testing data')\n",
-        "print(test_data)"
+        "print(test_data)\n",
+        "test_data=test_data[:,:-1]"
       ],
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training data\n",
-            "[['sunny' 'mild' 'high' 'weak' 'no']\n",
-            " ['sunny' 'hot' 'high' 'strong' 'no']\n",
-            " ['overcast' 'hot' 'high' 'weak' 'yes']\n",
-            " ['sunny' 'hot' 'high' 'weak' 'no']\n",
-            " ['rain' 'mild' 'high' 'strong' 'no']\n",
-            " ['rain' 'cool' 'normal' 'strong' 'no']\n",
+            "[['sunny' 'hot' 'high' 'strong' 'no']\n",
             " ['overcast' 'hot' 'normal' 'weak' 'yes']\n",
-            " ['rain' 'cool' 'normal' 'weak' 'yes']\n",
+            " ['overcast' 'mild' 'high' 'strong' 'yes']\n",
+            " ['sunny' 'mild' 'normal' 'strong' 'yes']\n",
             " ['sunny' 'cool' 'normal' 'weak' 'yes']\n",
+            " ['overcast' 'hot' 'high' 'weak' 'yes']\n",
             " ['rain' 'mild' 'high' 'weak' 'yes']\n",
-            " ['overcast' 'mild' 'high' 'strong' 'yes']]\n",
+            " ['sunny' 'mild' 'high' 'weak' 'no']\n",
+            " ['rain' 'mild' 'normal' 'weak' 'yes']]\n",
             "Testing data\n",
-            "[['overcast' 'cool' 'strong' 'weak' 'yes']\n",
-            " ['rain' 'mild' 'normal' 'weak' 'yes']\n",
-            " ['sunny' 'mild' 'normal' 'strong' 'yes']]\n"
+            "[['sunny' 'hot' 'high' 'weak' 'no']\n",
+            " ['rain' 'cool' 'normal' 'weak' 'yes']\n",
+            " ['rain' 'cool' 'normal' 'strong' 'no']\n",
+            " ['overcast' 'cool' 'strong' 'weak' 'yes']\n",
+            " ['rain' 'mild' 'high' 'strong' 'no']]\n"
           ],
           "name": "stdout"
         }
@@ -96,11 +98,11 @@
       "metadata": {
         "id": "b7UMWwad-RnM",
         "colab_type": "code",
+        "outputId": "cbc56e10-cc9a-4847-904d-23d8d668ec45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
-        },
-        "outputId": "ede7e906-ac52-4e9e-81ea-288327f27107"
+        }
       },
       "source": [
         "positive_count=0\n",
@@ -154,16 +156,16 @@
         "accuracy=acc*100/np.shape(test_target)[0]\n",
         "print('Accuracy={0} %'.format(accuracy))"
       ],
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Actual values:\n",
-            " ['yes' 'yes' 'yes']\n",
+            " ['no' 'yes' 'no' 'yes' 'no']\n",
             "Predicted values:\n",
-            " ['yes', 'yes', 'yes']\n",
-            "Accuracy=100.0 %\n"
+            " ['no', 'yes', 'yes', 'yes', 'yes']\n",
+            "Accuracy=60.0 %\n"
           ],
           "name": "stdout"
         }
