--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -28,11 +28,11 @@
       "metadata": {
         "id": "mOaicmwPL4Rw",
         "colab_type": "code",
+        "outputId": "8fa7e90b-b959-478c-a704-3d732ddf6e9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 417
-        },
-        "outputId": "7b625f0e-e349-4ec5-987f-185c9befa0a6"
+          "height": 399
+        }
       },
       "source": [
         "import csv\n",
@@ -58,17 +58,16 @@
         "      for x in range(len(each_row)-1):\n",
         "        if(each_row[x]!=sp_h[x]):\n",
         "          gen_h[x][x]=sp_h[x]\n",
-        "    indices=[i for i,val in enumerate(gen_h) if val==[\"?\" for i in range(len(sp_h))]]\n",
         "    print(\"S[{0}]:\".format(j),sp_h)\n",
         "    print(\"G[{0}]:\".format(j),gen_h)\n",
         "    print()\n",
-        "print()\n",
-        "for k in indices:\n",
-        "      gen_h.remove([\"?\" for i in range(len(sp_h))])\n",
+        "indices=[i for i,val in enumerate(gen_h) if val==[\"?\" for i in range(len(sp_h))]]\n",
+        "for k in range(len(indices)):\n",
+        "  gen_h.remove([\"?\" for i in range(len(sp_h))])\n",
         "print(\"Final specific hypothesis\",sp_h)\n",
         "print(\"Final general hypothesis\",gen_h)"
       ],
-      "execution_count": 34,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +89,6 @@
             "\n",
             "S[4]: ['japan', '?', '?', '?', 'economy']\n",
             "G[4]: [['japan', '?', '?', '?', '?'], ['?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?'], ['?', '?', '?', '?', '?'], ['?', '?', '?', '?', 'economy']]\n",
-            "\n",
             "\n",
             "Final specific hypothesis ['japan', '?', '?', '?', 'economy']\n",
             "Final general hypothesis [['japan', '?', '?', '?', '?'], ['?', '?', '?', '?', 'economy']]\n"
